додала до 30 ур

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,144 @@
-ul> li {
-    background: red;
-}
+/*ul> li {*/
+/*    background: red;*/
+/*}*/
 
-ol>li {
-    font-size: 20px;
-    color: brown;
-}
+/*ol>li {*/
+/*    font-size: 20px;*/
+/*    color: brown;*/
+/*}*/
+/*p {*/
+/*    text-align: justify;*/
+/*}*/
+
+/*p {*/
+/*    color: red;*/
+/*}*/
+
+/*p {*/
+/*    color: red;*/
+/*}*/
+/*i {*/
+/*    color: blue;*/
+/*}*/
+
+/*p {*/
+/*    color: blue;*/
+/*}*/
+
+/*p {*/
+/*    color: blue;*/
+/*}*/
+/*b {*/
+/*    color: red;*/
+/*}*/
+
+/*b {*/
+/*    color: red;*/
+/*}*/
+/*p {*/
+/*    color: blue;*/
+/*}*/
+
+/*ul {*/
+/*    color: blue;*/
+/*}*/
+
+/*ul {*/
+/*    color: blue;*/
+/*}*/
+/*li {*/
+/*    color: red;*/
+/*}*/
+
+
+/*  ul {*/
+/*      color: blue;*/
+/*  }*/
+/*li {*/
+/*    color: red;*/
+/*}*/
+/*i {*/
+/*    color: green;*/
+/*}*/
+
+/*i {*/
+/*    font-size: 30px;*/
+/*}*/
+/*ul {*/
+/*    font-size: 20px;*/
+/*}*/
+/*li {*/
+/*    color: red;*/
+/*    font-weight: bold;*/
+/*}*/
+
+/*li {*/
+/*    color: red;*/
+/*}*/
+
+/*li i {*/
+/*    color: red;*/
+/*}*/
+/*p i {*/
+/*    color: green;*/
+/*}*/
+
+/*b i {*/
+/*    color: red;*/
+/*}*/
+
+/*p i {*/
+/*    color: red;*/
+/*}*/
+
+/*p > i {*/
+/*    color: red;*/
+/*}*/
+
+/*.eee {*/
+/*    color: green;*/
+/*}*/
+/*.zzz {*/
+/*    color: red;*/
+/*}*/
+
+/*.odd {*/
+/*    color: red;*/
+/*}*/
+/*.eve {*/
+/*    color: green;*/
+/*}*/
+/*.eee {*/
+/*    color: red;*/
+/*}*/
+
+/*.red {*/
+/*    color: red;*/
+/*}*/
+
+/*.xxx {*/
+/*    color: red;*/
+/*}*/
+
+/*.block1 {*/
+/*    color: red;*/
+/*}*/
+/*.block2 {*/
+/*    color: green;*/
+/*}*/
+
+/*.ewe {*/
+/*    color: red;*/
+/*}*/
+/*.pro {*/
+/*    color: green;*/
+/*}*/
+/*.aba {*/
+/*    color: blue;*/
+/*}*/
+/*.ubu {*/
+/*    color: red;*/
+/*}*/
+/*.era {*/
+/*    color: green;*/
+/*}*/
