Выбор элемента по нескольким классам на CSS

--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,12 @@
 /*}*/
 /*////////////////////////////////////////////////////////////////////////////////////////*/
 
+/*.eee.zzz {*/
+/*    color: red;*/
+/*}*/
 
+.eee.zzz.ccc {
+    color: red;
+}
 
 
