Выбор элемента по нескольким классам на CSS

--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,15 @@
 /*    color: red;*/
 /*}*/
 
-.eee.zzz.ccc {
+/*.ccc .eee {*/
+/*    color: red;*/
+/*}*/
+
+/*#block p {*/
+/*    color: red;*/
+/*}*/
+
+#block h2 {
     color: red;
 }
 
