--- a/styles.css
+++ b/styles.css
@@ -239,9 +239,27 @@
 /*    text-decoration: none;*/
 /*}*/
 
+/*#elem {*/
+/*    width: 300px;*/
+/*    height: 100px;*/
+/*    color: white;*/
+/*    background-color: orange; !* задаем оранжевый цвет фона *!*/
+/*}*/
+
+/*#elem {*/
+/*    width: 300px;*/
+/*    height: 300px;*/
+/*    background-color: purple; !* задаем фиолетовый цвет фона *!*/
+/*}*/
+
 #elem {
     width: 300px;
-    height: 100px;
-    color: white;
-    background-color: orange; /* задаем оранжевый цвет фона */
+    height: 300px;
+    background-color: purple; /* задаем фиолетовый цвет фона */
+}
+#elem {
+    width: 400px;
+    height: 400px;
+    background-color: aquamarine;
+    text-align: center;
 }
