--- a/styles.css
+++ b/styles.css
@@ -252,14 +252,22 @@
 /*    background-color: purple; !* задаем фиолетовый цвет фона *!*/
 /*}*/
 
+/*#elem {*/
+/*    width: 300px;*/
+/*    height: 300px;*/
+/*    background-color: purple; !* задаем фиолетовый цвет фона *!*/
+/*}*/
+/*#elem {*/
+/*    width: 400px;*/
+/*    height: 400px;*/
+/*    background-color: aquamarine;*/
+/*    text-align: center;*/
+/*}*/
+
 #elem {
+    border-width: 3px;    /* толщина 3px */
+    border-style: solid;  /* в виде линии */
+    border-color: red;    /* красный цвет */
     width: 300px;
-    height: 300px;
-    background-color: purple; /* задаем фиолетовый цвет фона */
-}
-#elem {
-    width: 400px;
-    height: 400px;
-    background-color: aquamarine;
-    text-align: center;
+    height: 100px;
 }
