--- a/styles.css
+++ b/styles.css
@@ -264,10 +264,28 @@
 /*    text-align: center;*/
 /*}*/
 
-#elem {
-    border-width: 3px;    /* толщина 3px */
-    border-style: solid;  /* в виде линии */
-    border-color: red;    /* красный цвет */
-    width: 300px;
-    height: 100px;
+/*#elem {*/
+/*    border-width: 3px;    !* толщина 3px *!*/
+/*    border-style: solid;  !* в виде линии *!*/
+/*    border-color: red;    !* красный цвет *!*/
+/*    width: 300px;*/
+/*    height: 100px;*/
+/*}*/
+
+#menu {
+    display: flex;
+}
+#menu a {
+    margin-right: 5px;
+    padding: 10px;
+    font: 15px Arial;
+    text-decoration: none;
+    color: #1437AD;
+    border: 1px solid #1437AD;
+    background-color: white;
+}
+#menu a:hover, #menu a.active {
+    color: blue;
+    border: 1px solid blue;
+    background-color: #F5F6FA;
 }
