--- a/styles.css
+++ b/styles.css
@@ -272,20 +272,124 @@
 /*    height: 100px;*/
 /*}*/
 
-#menu {
-    display: flex;
-}
-#menu a {
-    margin-right: 5px;
-    padding: 10px;
-    font: 15px Arial;
-    text-decoration: none;
-    color: #1437AD;
-    border: 1px solid #1437AD;
-    background-color: white;
-}
-#menu a:hover, #menu a.active {
-    color: blue;
-    border: 1px solid blue;
-    background-color: #F5F6FA;
-}
+/*#menu {*/
+/*    display: flex;*/
+/*}*/
+/*#menu a {*/
+/*    margin-right: 5px;*/
+/*    padding: 10px;*/
+/*    font: 15px Arial;*/
+/*    text-decoration: none;*/
+/*    color: #1437AD;*/
+/*    border: 1px solid #1437AD;*/
+/*    background-color: white;*/
+/*}*/
+/*#menu a:hover, #menu a.active {*/
+/*    color: blue;*/
+/*    border: 1px solid blue;*/
+/*    background-color: #F5F6FA;*/
+/*}*/
+
+/*#wrapper {*/
+/*    width: 800px;*/
+/*    margin: 50px auto;*/
+/*    border: 1px solid black;*/
+/*}*/
+
+  /*Теперь можно добавить стили нашим блокам. Давайте добавим стиль менюшке:*/
+
+/*#menu {*/
+/*      display: flex;*/
+/*      justify-content: center;*/
+/*      margin-bottom: 20px;*/
+/*      background-color: #484848;*/
+/*  }*/
+/*#menu a {*/
+/*    margin: 0 5px;*/
+/*    padding: 15px 25px;*/
+/*    text-decoration: none;*/
+/*    color: #fff;*/
+/*    font: bold 14px Arial;*/
+/*}*/
+/*#menu a:hover, #menu a.active {*/
+/*    color: #484848;*/
+/*    background-color: #fff;*/
+/*}*/
+/*!*А теперь добавим стили элементам контента:*!*/
+
+/*#content {*/
+/*    padding: 0 30px 20px;*/
+/*}*/
+/*#content h1 {*/
+/*    text-align: center;*/
+/*    margin-top: 0;*/
+/*    margin-bottom: 10px;*/
+/*}*/
+/*#content p {*/
+/*    padding: 0 10px;*/
+/*    margin-bottom: 5px;*/
+/*    font: 18px/1.3 Arial;*/
+/*    text-align: justify;*/
+/*}*/
+/*!*Можем теперь собрать весь код вместе:*!*/
+
+/*  #wrapper {*/
+/*      width: 800px;*/
+/*      margin: 50px auto;*/
+/*      border: 1px solid black;*/
+/*  }*/
+
+/*#menu {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    margin-bottom: 20px;*/
+/*    background-color: #484848;*/
+/*}*/
+/*#menu a {*/
+/*    margin: 0 5px;*/
+/*    padding: 15px 25px;*/
+/*    text-decoration: none;*/
+/*    color: #fff;*/
+/*    font: bold 14px Arial;*/
+/*}*/
+/*#menu a:hover, #menu a.active {*/
+/*    color: #484848;*/
+/*    background-color: #fff;*/
+/*}*/
+
+/*#content {*/
+/*    padding: 0 30px 20px;*/
+/*}*/
+/*#content h1 {*/
+/*    text-align: center;*/
+/*    margin-top: 0;*/
+/*    margin-bottom: 10px;*/
+/*}*/
+/*#content p {*/
+/*    padding: 0 10px;*/
+/*    margin-bottom: 5px;*/
+/*    font: 18px/1.3 Arial;*/
+/*    text-align: justify;*/
+/*}*/
+
+/*#elem {*/
+/*    width: 400px;*/
+/*    height: 100px;*/
+/*    background-color: green;*/
+/*    color: aquamarine;*/
+
+/*}*/
+
+/*#elem {*/
+/*    width: 400px;*/
+/*    height: 400px;*/
+/*    background-color: mediumpurple;*/
+/*}*/
+
+/*#elem {*/
+/*    border-color: aqua;*/
+/*    border-width: 1px;*/
+/*    border-style: solid;*/
+/*    width: 100px;*/
+/*    height: 100px;*/
+/*}*/
